fix: pdding-top to 60px instead of 50 to avoid overlapping

--- a/webapp/src/stylesheets/main.scss
+++ b/webapp/src/stylesheets/main.scss
@@ -18,7 +18,7 @@ $bootstrap-icons-font-dir: '~bootstrap-icons/font/fonts';
 // Please try your best to use the existing Bootstrap classes first.
 
 body {
-  padding-top: 50px;
+  padding-top: 60px;
 }
 
 .card-object {
